# nekobox-serve

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
src/: auth.rs  database.rs  environment.rs  error.rs  main.rs  models.rs  queue.rs  traits.rs  wrapper.rs
src/database/: mod.rs  models.rs  redis.rs  sqlite.rs
src/service/: mod.rs  wrapper.rs  ytdl.rs
