[package]
name = "nekobox-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"]}
axum = "0.6.1"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
redis = "0.22.2"
chrono = { version = "0.4.23", features = ["serde"]}
rand = "0.8.5"