[package]
name = "nekobox-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"]}
axum = "0.6.1"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
toml = "0.5.10"
redis = "0.22.2"
rusqlite = "0.28.0"
directories = "4.0.1"
chrono = { version = "0.4.23", features = ["serde"]}
rand = "0.8.5"
lazy_static = "1.4.0"
jsonwebtoken = "8.2.0"
validator = { version = "0.16", features = ["derive"] }