[package]
name = "nekobox-rest"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.25", features = ["full"]}
tokio-util = { version = "0.7.4", features = ["io"] }
axum = "0.6.1"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
rust-crypto = "0.2.36"
base64 = "0.21.0"
toml = "0.7.0"
redis = "0.22.2"
rusqlite = "0.28.0"
directories = "4.0.1"
chrono = { version = "0.4.23", features = ["serde"]}
rand = "0.8.5"
lazy_static = "1.4.0"
jsonwebtoken = "8.2.0"
validator = { version = "0.16", features = ["derive"] }